<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard_title" />
    
    <item
        android:id="@+id/nav_students"
        android:icon="@drawable/ic_students"
        android:title="@string/nav_students" />
    
    <item
        android:id="@+id/nav_teachers"
        android:icon="@drawable/ic_teachers"
        android:title="@string/nav_teachers" />
    
    <item
        android:id="@+id/nav_classes"
        android:icon="@drawable/ic_classes"
        android:title="@string/nav_classes" />
    
    <item
        android:id="@+id/nav_attendance"
        android:icon="@drawable/ic_attendance"
        android:title="@string/nav_attendance" />
</menu>